src/test/deca/syntax/invalid/Class.deca
// Description:
//    Class au lieu de class
//
// Resultats:
//    Une erreur de compilation
//
// Historique:
//    cree le 04/01/2023

Class A {

}
